feat: Kopis에 API요청을 보내는 KopisApiClient 구현

--- a/web-api/src/main/resources/application.yml
+++ b/web-api/src/main/resources/application.yml
@@ -3,6 +3,7 @@ spring:
         name: web-api
     profiles.include:
         - infra
+        - infra-secret
     api:
         prefix: "/api"
         version: "v1"
