refactor: completable future를 이용한 비동기 처리로 성능 향상, 커넥션 풀 수 증가, jdbc batch size 설정

--- a/infra-layer/src/main/resources/application-infra.yml
+++ b/infra-layer/src/main/resources/application-infra.yml
@@ -4,6 +4,9 @@ spring:
         url: jdbc:mysql://localhost:3306/develop?serverTimezone=Asia/Seoul
         username: admin
         password: password
+        hikari:
+            maximum-pool-size: 50
+            minimum-idle: 10
     jpa:
         database: mysql
         show-sql: false
@@ -13,4 +16,9 @@ spring:
             hibernate:
                 format_sql: true
                 dialect: org.hibernate.dialect.MySQLDialect
+                jdbc:
+                    batch_size: 1000
+                # INSERT/UPDATE 순서를 정렬하여 배치 효율 개선
+                order_inserts: true
+                order_updates: true
         generate-ddl: false
