--- a/infra-layer/src/main/resources/application-infra-secret-template.yml
+++ b/infra-layer/src/main/resources/application-infra-secret-template.yml
@@ -1,4 +1,9 @@
+spring:
+    datasource:
+        url: jdbc:mysql://{MYSQL_HOST}:{MYSQL_PORT}/{MYSQL_DATABASE}?serverTimezone=Asia/Seoul
+        username: {MYSQL_USERNAME}
+        password: {MYSQL_PASSWORD}
 kopis:
     api:
-        key: KOPIS_API_KEY
-        base-url: KOPIS_API_BASE_URL
+        key: {KOPIS_API_KEY}
+        base-url: {KOPIS_API_BASE_URL}
