feat: 부하테스트 세팅 추가, docker-compose에 자원 제한 추가

--- a/docker-compose-local.yml
+++ b/docker-compose-local.yml
@@ -9,6 +9,11 @@ services:
             MYSQL_DATABASE: ${MYSQL_DATABASE}
             MYSQL_USER: ${MYSQL_USER}
             MYSQL_PASSWORD: ${MYSQL_PASSWORD}
+        deploy:
+            resources:
+                limits:
+                    cpus: "2.0"
+                    memory: 2GB
         expose:
             - "3306"
         ports:
