--- a/docker-compose-web-api.yml
+++ b/docker-compose-web-api.yml
@@ -16,19 +16,27 @@ services:
                     memory: 2GB
         environment:
             NEW_RELIC_LICENSE_KEY: ${NEW_RELIC_LICENSE_KEY}
+        networks:
+            - monitoring_net
 
-    agent:
-        container_name: newrelic-infra
-        build:
-            context: ./newrelic
-            dockerfile: newrelic-infra.dockerfile
-        cap_add:
-            - SYS_PTRACE
-        pid: host
-        privileged: true
-        volumes:
-            - "/:/host:ro"
-            - "/var/run/docker.sock:/var/run/docker.sock"
-        restart: unless-stopped
-        environment:
-            NRIA_LICENSE_KEY: ${NEW_RELIC_LICENSE_KEY}
+#    agent:
+#        container_name: newrelic-infra
+#        build:
+#            context: ./newrelic
+#            dockerfile: newrelic-infra.dockerfile
+#        cap_add:
+#            - SYS_PTRACE
+#        pid: host
+#        privileged: true
+#        volumes:
+#            - "/:/host:ro"
+#            - "/var/run/docker.sock:/var/run/docker.sock"
+#        restart: unless-stopped
+#        environment:
+#            NRIA_LICENSE_KEY: ${NEW_RELIC_LICENSE_KEY}
+#        networks:
+#            - monitoring_net
+
+networks:
+    monitoring_net:
+        external: true
