--- a/load-test/docker-compose.yml
+++ b/load-test/docker-compose.yml
@@ -11,6 +11,8 @@ services:
             - INFLUXDB_DB=${INFLUXDB_DB}
         volumes:
             - ./ticket-world-influxdb-data:/var/lib/influxdb
+        networks:
+            - monitoring_net
 
     ticket-world-grafana:
         image: bitnami/grafana
@@ -18,7 +20,24 @@ services:
             - "3001:3000"
         volumes:
             - ./ticket-world-grafana-data:/var/lib/grafana
+        networks:
+            - monitoring_net
+
+    ticket-world-prometheus:
+        image: prom/prometheus
+        volumes:
+            - ./prometheus.yml:/etc/prometheus/prometheus.yml
+        command:
+            - '--config.file=/etc/prometheus/prometheus.yml'
+        ports:
+            - "9090:9090"
+        networks:
+            - monitoring_net
 
 volumes:
     ticket-world-influxdb-data:
     ticket-world-grafana-data:
+
+networks:
+    monitoring_net:
+        external: true
